# mjolnir

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  224300917_features_and_values.txt  242700635_features_and_values.txt  BUILD.bazel  MODULE.bazel  Makefile  PR-78-MANUAL-TEST.md  README.bazel.md  README.cameras.md  README.dev.md  README.md  camera_assignment.example.json  docker-compose.yml  setup_linux.sh  setup_mac.sh
.githooks/: post-checkout
analysis/: CameraError.m  Plot_trajectory.py  covariance.csv  test_case.rs  trajectory_optimized.csv
analysis/object_detection/: readme.md
analysis/opencv_approach/: detect_start.py  params.py  pipeline.py  tuned_cv.py
analysis/py_capture/: README.md  capture_aravis.py  ensure_ptp.py
backend/: BUILD.bazel  Cargo.toml  README.md
backend/MathScripts/: Cargo.toml  trajectory_true.csv
backend/MathScripts/src/: Plot_trajectory.py  math_triangulation.rs
backend/MathTriangulation/: BUILD.bazel
backend/MathTriangulation/src/: math_triangulation.rs
backend/api/: schema.py
backend/src/: aggregation_coordinator.rs  camera_ingest_config.rs  cli.rs  lib.rs  main.dev.rs  main.prod.rs  main.rs  matched_contour_pair_aggregator.rs  trajectory_input_collector.rs
backend/src/MathTriangulation/: BUILD.bazel  main.rs
backend/src/aggregator/: aggregation_coordinator.rs  matched_contour_pair_aggregator.rs  matched_frame_pair_aggregator.rs  mod.rs  rerun_pipeline.rs  trajectory_input_collector.rs
backend/src/camera/: aravis_utils.rs  camera_assignment.rs  cancelable_barrier.rs  cli_cv.rs  cli_real.rs  cli_record.rs  cli_stream.rs  config.rs  discovery.rs  ip_identifier.rs  mod.rs
backend/src/camera/record/: capture.rs  cli.rs  config.rs  mod.rs  record_from_one_camera.rs  writer.rs
backend/src/camera/record/compression/: encoder.rs  frames.rs  inspect.rs  mod.rs  recovery.rs  session.rs  shared.rs
backend/src/camera/stream/: app.rs  camera_settings.rs  capture.rs  cli.rs  frame.rs  lib.rs  mod.rs
backend/src/camera_ingest/: camera_ingest.rs  camera_ingest_helpers.rs  discovery.rs  h265_record.rs  h265_stream.rs  live_dual_cam_ingest.rs  mod.rs  replay_recorded_session.rs
backend/src/circle_infractions_ingest/: circle_infractions_thread.rs  infraction_byte_decoder.rs  mod.rs
backend/src/computer_vision/: contour.rs  forward_downsampled_copy.rs  intensity_normalization.rs  mod.rs  mog2.rs  undistortion.rs
backend/src/config/: field_left.rs  field_right.rs
backend/src/hardware/: camera.rs  frame.rs  mod.rs
backend/src/math_triangulation/: math_triangulation.rs  mod.rs  test_case.rs  triangulation_output.rs
backend/src/pipeline/: consumer.rs  contour_output.rs  frame.rs  matched_frame_pair.rs  mod.rs  pipeline.rs  pipeline_stage.rs  producer.rs  queue.rs  test_utils.rs
backend/src/schemas/: camera_ingest_config.rs  contour_output.rs  frame.rs  mod.rs  throw_type.rs  throwing_event.rs
backend/src/server/: app_state.rs  frames_route.rs  mod.rs  server.rs  throw_source.rs
backend/src/sports/: mod.rs  throwing_event.rs
backend/src/throws/: decision.rs  infractions.rs  mod.rs  simulate_throw.rs  throw_analysis.rs  throw_type.rs
backend/src/time/: mod.rs  ptp_offset.rs
backend/src/timing/: global_time.rs  mod.rs
backend/src/tools/: env.rs  mod.rs
backend/src/triangulation/: mod.rs  triangulation_output.rs
backend_python/: Dockerfile  main.py  pyproject.toml
backend_python/api/: dummy.py  routes.py
backend_python/pipeline/: frame.py  producer.py  queue.py
backend_python/tests/: test_queue.py
backend_rust/src/: camera.rs  frame.rs  main.rs  pipeline.rs  queue.rs  throwing_event.rs
bazel_support/: BUILD.bazel  bazel_health_verifier.sh
circle_infractions/: README.md  Test.py
circle_infractions/arduino/: trill_flex_events.ino
circle_infractions/tools/: log_trill.py  read_serial.py
computer_vision/object_detection/: dino_detection.ipynb
data/: .gitkeep
deploy/: BUILD.bazel  deploy_mjolnir.sh
frontend/: BUILD.bazel  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts  schemas.ts
message_formats/: circle_infractions.md
scripts/: setup_linux.sh  setup_mac.sh  test_pr78.sh  test_pr78_no_cameras.sh
