"""
MODULE file for Mjölnir monorepo.

MODULE files are manifests for Bazel repositories. They live at the repository
root and publish metadata including the module's name, version, and external
dependencies. Go to the following link for more information:
https://bazel.build/external/module

Includes support for Rust and TypeScript, by including dependencies that
provide definitions (rules) for how to build in Bazel using these languages.
"""

# Mjölnir module.
module(
    name = "mjolnir",
    version = "0.0.1",
)

# External dependencies.
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Toolchains

# Needed for compiling for embedded platforms
bazel_dep(name = "platforms", version = "1.0.0")

# Custom C/C++/Rust/LLVM languages tooling
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {"": "c++20"},
    llvm_version = "20.1.7",
)
llvm.extra_target_compatible_with(
    name = "llvm_toolchain",
    constraints = ["@//:cxx20"],
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "toolchains_musl", version = "0.1.27")

toolchains_musl = use_extension("@toolchains_musl//:toolchains_musl.bzl", "toolchains_musl")
toolchains_musl.config(
    extra_target_compatible_with = ["//:musl"],
)

bazel_dep(name = "rules_rust_bindgen", version = "0.69.0")

register_toolchains("//:rust_bindgen_toolchain")

bazel_dep(name = "rules_cc", version = "0.2.17")

# For building cmake projects
bazel_dep(
    name = "rules_foreign_cc",
    version = "0.15.1",
)

rfc_tools = use_extension(
    "@rules_foreign_cc//foreign_cc:extensions.bzl",
    "tools",
)
use_repo(rfc_tools, "cmake_3.31.8_toolchains", "ninja_1.13.0_toolchains")

register_toolchains(
    "@cmake_3.31.8_toolchains//:all",
    "@ninja_1.13.0_toolchains//:all",
)

# -----------------------------------------------------------------------------
# Rust dependencies
# -----------------------------------------------------------------------------
# rules_rust: https://github.com/bazelbuild/rules_rust
# Provides Bazel rules and toolchains for building Rust code.
bazel_dep(
    name = "rules_rust",
    version = "0.69.0",
)

# Activate Rust module extension from rules_rust.
# See https://bazelbuild.github.io/rules_rust/
rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
)

# Register the Rust toolchain version and edition used by this repo.
rust.toolchain(
    edition = "2024",
    versions = ["1.94.0"],
)

# Make generated rust_toolchains repo visible to this module.
use_repo(rust, "rust_toolchains")

# Register toolchains so Bazel can choose the right one during build.
register_toolchains("@rust_toolchains//:all")

# crate_universe generates Bazel targets for Cargo dependencies.
crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)

# Add external Rust dependencies here.
crate.spec(
    default_features = False,
    package = "aravis",
    version = "0.11.1",
)
crate.spec(
    default_features = False,
    package = "aravis-sys",
    version = "0.11.1",
)
crate.spec(
    package = "axum",
    version = "0.8.8",
)
crate.spec(
    package = "axum-embed",
    version = "0.1.0",
)
crate.spec(
    package = "chrono",
    version = "0.4.44",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.6.0",
)
crate.spec(
    package = "ctrlc",
    version = "3.5.2",
)
crate.spec(
    package = "crossbeam",
    version = "0.8",
)
crate.spec(
    package = "eframe",
    version = "0.34.1",
)
crate.spec(
    package = "egui",
    version = "0.34.1",
)
crate.spec(
    package = "epaint",
    version = "0.34.1",
)
crate.spec(
    package = "glib",
    version = "=0.20.10",
)
crate.spec(
    package = "http-body-util",
    version = "0.1",
)
crate.spec(
    package = "if-addrs",
    version = "0.15.0",
)
crate.spec(
    features = ["clang-runtime"],
    package = "opencv",
    version = "0.98.2",
)
crate.annotation(
    build_script_data = ["@@//third_party:libclang_filegroup"],
    build_script_env = {
        "OPENCV_LINK_LIBS": "opencv_core,opencv_imgproc,opencv_imgcodecs,opencv_calib3d,opencv_features2d,opencv_flann,opencv_dnn",
        "OPENCV_PACKAGE_NAME": "opencv4",
        "LIBCLANG_PATH": "$(execpath @@//third_party:libclang_filegroup)",
        "DYLD_LIBRARY_PATH": "$(execpath @@//third_party:libclang_filegroup)/..",
    },
    build_script_link_deps = ["@@//third_party:opencv"],
    crate = "opencv",
    deps = ["@@//third_party:opencv"],
)
crate.spec(
    package = "rand",
    version = "0.10.0",
)
crate.spec(
    default_features = False,
    features = [],
    package = "rstest",
    version = "0.26.1",
)
crate.spec(
    features = [
        "debug-embed",
        "interpolate-folder-path",
    ],
    package = "rust-embed",
    version = "8.11.0",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1.0.228",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1.0.228",
)
crate.spec(
    package = "serde_json",
    version = "1.0",
)
crate.spec(
    package = "serialport",
    version = "4.9.0",
)
crate.spec(
    features = ["full"],
    package = "tokio",
    version = "1.50.0",
)
crate.spec(
    package = "tower",
    version = "0.5",
)
crate.spec(
    features = ["cors"],
    package = "tower-http",
    version = "0.6.8",
)
crate.spec(
    features = [
        "v4",
        "serde",
    ],
    package = "uuid",
    version = "1.23.0",
)
crate.from_specs(
    name = "crates",
)

# Make generated Cargo dependency repository visible to this module.
use_repo(crate, "crates")

# -----------------------------------------------------------------------------
# JavaScript dependencies
# -----------------------------------------------------------------------------
# aspect_rules_js:
# Provides Bazel rules for JavaScript tooling, including running the
# Next.js development server.
bazel_dep(
    name = "aspect_rules_js",
    version = "3.0.3",
)

# Use NPM extension and make visible to this module.
# This ensures consistent, reproducible installations across environments.
# Note: had to install PNPM and run `pnpm install` to generate pnpm-lock.yaml.
# Note: had to run `pnpm approve-builds` to generate pnpm-workspace.yaml.
npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)

# Translate the NPM lockfile into Bazel targets for NPM packages, allowing
# Bazel to reference the dependencies in frontend.
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//frontend:pnpm-lock.yaml",
)

# Make generated NPM repository visible to this module.
use_repo(npm, "npm")
