load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

# -----------------------------------------------------------------------------
# MAIN BINARY
# -----------------------------------------------------------------------------

# Define a library that compiles the source code and can be used by
# both the dev and prod binaries. Can be optimized using command
# line arguments.
rust_library(
    name = "backend_lib",
    crate_name = "backend_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.*.rs"],
    ),
    rustc_flags = select({
        "//:release": ["-Cstrip=debuginfo"],
        "//conditions:default": [],
    }),
    deps = [
        "@crates//:anyhow",
        "@crates//:aravis",
        "@crates//:axum",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:eframe",
        "@crates//:scuffle-h265",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tower-http",
    ],
)

# Note, the main reason for splitting into dev and prod
# binaries is to handle differences in how the applications serve
# the frontend. Optimization can technically occur for either target
# using `--config=release` (see .bazelrc).

# -----------------------------------------------------------------------------
# MAIN TARGETS
# -----------------------------------------------------------------------------

rust_binary(
    name = "dev",
    srcs = ["src/main.dev.rs"],
    deps = [
        ":backend_lib",
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:tower-http",
    ],
)

rust_binary(
    name = "prod",
    srcs = ["src/main.prod.rs"],
    deps = [
        ":backend_lib",
        "@crates//:axum",
        "@crates//:axum-embed",
        "@crates//:tokio",
        "@crates//:rust-embed",
    ],
    compile_data = ["//frontend:static_exports"],
    rustc_env = {
        "EMBEDDED_FRONTEND_DIR": "$(execpath //frontend:static_exports)",
    },
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Cpanic=abort",
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
)

rust_test(
    name = "tests",
    crate = ":backend_lib",
    deps = [
        "@crates//:http-body-util",
        "@crates//:tower",
    ],
)

rust_test(
    name = "record_from_cameras_tests",
    crate = ":record_from_cameras",
)

rust_test(
    name = "recover_h265_to_png_tests",
    crate = ":recover_h265_to_png",
)

# -----------------------------------------------------------------------------
# AUXILIARY BINARIES
# -----------------------------------------------------------------------------

rust_binary(
    name = "discover_cameras",
    srcs = ["src/bin/discover_cameras.rs"],
    deps = [":backend_lib"],
)

alias(
    name = "discover",
    actual = ":discover_cameras",
)

rust_binary(
    name = "record_from_cameras_raw",
    srcs = ["src/bin/record_from_cameras_original.rs"],
    deps = [
        ":backend_lib",
        "@crates//:clap",
    ],
)

rust_binary(
    name = "record_from_cameras",
    srcs = ["src/bin/record_from_cameras.rs"],
    deps = [
        ":backend_lib",
        "@crates//:anyhow",
        "@crates//:aravis",
        "@crates//:clap",
    ],
)

alias(
    name = "record_from_cameras_h265",
    actual = ":record_from_cameras",
)

alias(
    name = "record_cameras",
    actual = ":record_from_cameras",
)

rust_binary(
    name = "recover_h265_to_png",
    srcs = ["src/bin/recover_h265_to_png.rs"],
    deps = [
        ":backend_lib",
        "@crates//:anyhow",
        "@crates//:clap",
    ],
)

rust_binary(
    name = "live_stream",
    srcs = ["src/bin/live_stream.rs"],
    deps = [
        ":backend_lib",
        "@crates//:clap",
        "@crates//:eframe",
        "@crates//:egui",
    ],
)

alias(
    name = "stream",
    actual = ":live_stream",
)
