load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

# -----------------------------------------------------------------------------
# BACKEND LIBRARY
# -----------------------------------------------------------------------------

# Define a library that compiles the source code and can be used by
# both the dev/prod and fake/real binaries. Can be optimized using
# command line arguments.

rust_library(
    name = "backend_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = [
            "src/bin/",
            "src/main.*.rs",
            # Exclude following code that contains egui and eframe.
            # See ticket #30 for more information.
            "src/camera/stream/**/*.rs",
        ],
    ),
    crate_features = ["real"],
    rustc_flags = select({
        "//:release": ["-Cstrip=debuginfo"],
        "//conditions:default": [],
    }),
    deps = [
        "@crates//:aravis",
        "@crates//:aravis-sys",
        "@crates//:argmin",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:eframe",
        "@crates//:glib",
        "@crates//:if-addrs",
        "@crates//:levenberg-marquardt",
        "@crates//:nalgebra",
        "@crates//:opencv",
        "@crates//:rand",
        "@crates//:rand_distr",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serialport",
        "@crates//:tokio",
        "@crates//:uuid",
    ],
)

rust_library(
    name = "backend_lib_fake",
    # The source code should exclude anything related to CV, pipeline,
    # cameras, triangulation, etc. So just include the bare minimum
    # to simulate throws.
    srcs = glob([
            "src/server/**/*.rs",
            "src/throws/**/*.rs",
            "src/**/lib.rs",
            # Technically it doesn't make sense to include circle infractions
            # code in fake lib, but will break if not included. Spin off ticket?
            "src/circle_infractions_ingest/**/*.rs",
        ],
        exclude = [
            "src/bin/",
            "src/main.*.rs",
            # Exclude following code that contains egui and eframe.
            # See ticket #30 for more information.
            "src/camera/stream/**/*.rs",
            # Exclude any code related to computer vision.
            "src/computer_vision/**/*.rs",
            "src/pipeline/**/*.rs",
        ],
    ),
    crate_features = ["fake"],
    crate_name = "backend_lib",
    rustc_flags = select({
        "//:release": ["-Cstrip=debuginfo"],
        "//conditions:default": [],
    }),
    deps = [
        "@crates//:aravis",
        "@crates//:aravis-sys",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:eframe",
        "@crates//:glib",
        "@crates//:if-addrs",
        "@crates//:rand",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:uuid",
    ],
)

# Define a secondary library for streaming, which uses eframe and egui.
# We do this because optimized release builds will use the `abort` panic
# strategy to decrease binary size, but eframe and egui require the `unwind`
# panic strategy. We would like to exclude this library from optimization
# since it would throw an error and it's not needed in the final binary anyways.
# See ticket #30 for more information.
rust_library(
    name = "stream_lib",
    srcs = glob(["src/camera/stream/**/*.rs"]),
    rustc_flags = select({
        "//:release": ["-Cstrip=debuginfo"],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib",
        "@crates//:aravis",
        "@crates//:crossbeam",
        "@crates//:eframe",
        "@crates//:egui",
    ],
)

# -----------------------------------------------------------------------------
# MAIN BINARY
# -----------------------------------------------------------------------------

# Note, the main reason for splitting into dev and prod
# binaries is to handle differences in how the applications serve
# the frontend. Optimization can technically occur for either target
# using `--config=release` (see .bazelrc).

# Note: The reason for splitting into fake and real binaries is to have
# the fake backend use simulated throw data, while the real backend
# actually starts up the CV pipelines per camera. The `analyze-throw`
# route will also call different functions based on this configuration.

# Dev modes for the backend doesn't have to be optimized. In this mode,
# the backend can serve the API via command line and it runs alongside
# the Next.js server. Since the Next.js requests come from a different
# origin, CORS is needed. It will not have any embedded assets.

rust_binary(
    name = "dev_fake",
    srcs = ["src/main.dev.rs"],
    crate_features = ["fake"],
    deps = [
        ":backend_lib_fake",
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:tower-http",
    ],
)

rust_binary(
    name = "dev_real",
    srcs = ["src/main.dev.rs"],
    crate_features = ["real"],
    deps = [
        ":backend_lib",
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:tower-http",
    ],
)

# Prod modes for the backend should be optimized. In this mode, the
# backend will serve the API but instead of serving the Next.js server,
# it will embed the frontend's static exports using rust-embed and
# serve using axum_embed.

rust_binary(
    name = "prod_fake",
    srcs = ["src/main.prod.rs"],
    compile_data = ["//frontend:static_exports"],
    crate_features = ["fake"],
    # At compile-time, this env var tells our source code exactly where
    # Bazel placed the frontend outputs, so rust-embed can embed it
    # into the binary directly.
    rustc_env = {
        "EMBEDDED_FRONTEND_DIR": "$(execpath //frontend:static_exports)",
    },
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Cpanic=abort",
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib_fake",
        "@crates//:axum",
        "@crates//:axum-embed",
        "@crates//:rust-embed",
        "@crates//:tokio",
    ],
)

# Prod mode for the backend should be optimized. In this mode, the
# backend will serve the API but instead of serving the Next.js server,
# it will embed the frontend's static exports using rust-embed and
# serve using axum_embed.
rust_binary(
    name = "prod_real",
    srcs = ["src/main.prod.rs"],
    compile_data = ["//frontend:static_exports"],
    crate_features = ["real"],
    # At compile-time, this env var tells our source code exactly where
    # Bazel placed the frontend outputs, so rust-embed can embed it
    # into the binary directly.
    rustc_env = {
        "EMBEDDED_FRONTEND_DIR": "$(execpath //frontend:static_exports)",
    },
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Cpanic=abort",
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib",
        "@crates//:axum",
        "@crates//:axum-embed",
        "@crates//:rust-embed",
        "@crates//:tokio",
    ],
)

# Unit tests to test the backend library.
rust_test(
    name = "tests",
    crate = ":backend_lib",
    crate_features = ["real"],
    deps = [
        "@crates//:http-body-util",
        "@crates//:rstest",
        "@crates//:tower",
    ],
)

# -----------------------------------------------------------------------------
# AUXILIARY BINARIES
# -----------------------------------------------------------------------------

rust_binary(
    name = "discover",
    srcs = ["src/bin/discover_cameras.rs"],
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Cpanic=abort",
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib",
    ],
)

rust_binary(
    name = "record_from_one",
    srcs = ["src/bin/record_from_one_camera.rs"],
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:ctrlc",
    ],
)

rust_binary(
    name = "record",
    srcs = ["src/bin/record_from_both_cameras.rs"],
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:ctrlc",
    ],
)

rust_binary(
    name = "stream",
    srcs = ["src/bin/live_stream.rs"],
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib",
        ":stream_lib",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:ctrlc",
        "@crates//:eframe",
        "@crates//:egui",
    ],
)
