load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

# -----------------------------------------------------------------------------
# BACKEND LIBRARIES
# -----------------------------------------------------------------------------

rust_library(
    name = "backend_lib_all_real",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = [
            "src/bin/",
            "src/main.*.rs",
            # Exclude following code that contains egui and eframe.
            # See ticket #30 for more information.
            "src/camera/stream/**/*.rs",
        ],
    ),
    crate_features = [
        "real_circle_sensors",
        "real_cameras",
    ],
    crate_name = "backend_lib",
    rustc_flags = select({
        "//:release": ["-Cstrip=debuginfo"],
        "//conditions:default": [],
    }),
    deps = [
        "//third_party:aravis",
        "//third_party:aravis_sys",
        "//third_party:glib",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:if-addrs",
        "@crates//:levenberg-marquardt",
        "@crates//:nalgebra",
        "@crates//:opencv",
        "@crates//:rand",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serialport",
        "@crates//:tiff",
        "@crates//:tokio",
        "@crates//:uuid",
    ],
)

rust_library(
    name = "backend_lib_real_cameras",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = [
            "src/bin/",
            "src/main.*.rs",
            # Exclude following code that contains egui and eframe.
            # See ticket #30 for more information.
            "src/camera/stream/**/*.rs",
        ],
    ),
    crate_features = ["real_cameras"],
    crate_name = "backend_lib",
    rustc_flags = select({
        "//:release": ["-Cstrip=debuginfo"],
        "//conditions:default": [],
    }),
    deps = [
        "//third_party:aravis",
        "//third_party:aravis_sys",
        "//third_party:glib",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:if-addrs",
        "@crates//:levenberg-marquardt",
        "@crates//:nalgebra",
        "@crates//:opencv",
        "@crates//:rand",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tiff",
        "@crates//:tokio",
        "@crates//:uuid",
    ],
)

rust_library(
    name = "backend_lib_real_circle_sensors",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = [
            "src/bin/",
            "src/main.*.rs",
            # Exclude following code that contains egui and eframe.
            # See ticket #30 for more information.
            "src/camera/stream/**/*.rs",
        ],
    ),
    crate_features = ["real_circle_sensors"],
    crate_name = "backend_lib",
    rustc_flags = select({
        "//:release": ["-Cstrip=debuginfo"],
        "//conditions:default": [],
    }),
    deps = [
        "//third_party:aravis",
        "//third_party:aravis_sys",
        "//third_party:glib",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:if-addrs",
        "@crates//:levenberg-marquardt",
        "@crates//:nalgebra",
        "@crates//:opencv",
        "@crates//:rand",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serialport",
        "@crates//:tiff",
        "@crates//:tokio",
        "@crates//:uuid",
    ],
)

rust_library(
    name = "backend_lib_all_fake",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = [
            "src/bin/",
            "src/main.*.rs",
            # Exclude following code that contains egui and eframe.
            # See ticket #30 for more information.
            "src/camera/stream/**/*.rs",
        ],
    ),
    crate_name = "backend_lib",
    rustc_flags = select({
        "//:release": ["-Cstrip=debuginfo"],
        "//conditions:default": [],
    }),
    deps = [
        "//third_party:aravis",
        "//third_party:aravis_sys",
        "//third_party:glib",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:if-addrs",
        "@crates//:levenberg-marquardt",
        "@crates//:nalgebra",
        "@crates//:opencv",
        "@crates//:rand",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tiff",
        "@crates//:tokio",
        "@crates//:uuid",
    ],
)

# Define a secondary library for streaming, which uses eframe and egui.
# We do this because optimized release builds will use the `abort` panic
# strategy to decrease binary size, but eframe and egui require the `unwind`
# panic strategy. We would like to exclude this library from optimization
# since it would throw an error and it's not needed in the final binary anyways.
# See ticket #30 for more information.
rust_library(
    name = "stream_lib",
    srcs = glob(["src/camera/stream/**/*.rs"]),
    rustc_flags = select({
        "//:release": ["-Cstrip=debuginfo"],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib_real_cameras",
        "//third_party:aravis",
        "@crates//:crossbeam",
        "@crates//:eframe",
        "@crates//:egui",
    ],
)

# -----------------------------------------------------------------------------
# MAIN BINARIES
# -----------------------------------------------------------------------------

# Note, the main reason for splitting into dev and prod
# binaries is to handle differences in how the applications serve
# the frontend. Optimization can technically occur for either target
# using `--config=release` (see .bazelrc).

# Note: The reason for splitting into fake and real binaries is to have
# the fake backend use simulated throw data, while the real backend
# actually starts up the CV pipelines per camera. The `analyze-throw`
# route will also call different functions based on this configuration.

# Dev modes for the backend doesn't have to be optimized. In this mode,
# the backend can serve the API via command line and it runs alongside
# the Next.js server. Since the Next.js requests come from a different
# origin, CORS is needed. It will not have any embedded assets.

rust_binary(
    name = "dev_all_fake",
    srcs = ["src/main.dev.rs"],
    deps = [
        ":backend_lib_all_fake",
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:tower-http",
    ],
)

rust_binary(
    name = "dev_real_cameras",
    srcs = ["src/main.dev.rs"],
    crate_features = ["real_cameras"],
    deps = [
        ":backend_lib_real_cameras",
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:tower-http",
    ],
)

rust_binary(
    name = "dev_real_circle_sensors",
    srcs = ["src/main.dev.rs"],
    deps = [
        ":backend_lib_real_circle_sensors",
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:tower-http",
    ],
)

rust_binary(
    name = "dev_all_real",
    srcs = ["src/main.dev.rs"],
    crate_features = ["real_cameras"],
    deps = [
        ":backend_lib_all_real",
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:tower-http",
    ],
)

# Prod modes for the backend should be optimized. In this mode, the
# backend will serve the API but instead of serving the Next.js server,
# it will embed the frontend's static exports using rust-embed and
# serve using axum_embed.

rust_binary(
    name = "prod_all_fake",
    srcs = ["src/main.prod.rs"],
    compile_data = ["//frontend:static_exports"],
    # At compile-time, this env var tells our source code exactly where
    # Bazel placed the frontend outputs, so rust-embed can embed it
    # into the binary directly.
    rustc_env = {
        "EMBEDDED_FRONTEND_DIR": "$(execpath //frontend:static_exports)",
    },
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Cpanic=abort",
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib_all_fake",
        "@crates//:axum",
        "@crates//:axum-embed",
        "@crates//:rust-embed",
        "@crates//:tokio",
    ],
)

rust_binary(
    name = "prod_real_cameras",
    srcs = ["src/main.prod.rs"],
    compile_data = ["//frontend:static_exports"],
    crate_features = ["real_cameras"],
    # At compile-time, this env var tells our source code exactly where
    # Bazel placed the frontend outputs, so rust-embed can embed it
    # into the binary directly.
    rustc_env = {
        "EMBEDDED_FRONTEND_DIR": "$(execpath //frontend:static_exports)",
    },
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Cpanic=abort",
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib_real_cameras",
        "@crates//:axum",
        "@crates//:axum-embed",
        "@crates//:rust-embed",
        "@crates//:tokio",
    ],
)

rust_binary(
    name = "prod_real_circle_sensors",
    srcs = ["src/main.prod.rs"],
    compile_data = ["//frontend:static_exports"],
    # At compile-time, this env var tells our source code exactly where
    # Bazel placed the frontend outputs, so rust-embed can embed it
    # into the binary directly.
    rustc_env = {
        "EMBEDDED_FRONTEND_DIR": "$(execpath //frontend:static_exports)",
    },
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Cpanic=abort",
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib_real_circle_sensors",
        "@crates//:axum",
        "@crates//:axum-embed",
        "@crates//:rust-embed",
        "@crates//:tokio",
    ],
)

# Prod mode for the backend should be optimized. In this mode, the
# backend will serve the API but instead of serving the Next.js server,
# it will embed the frontend's static exports using rust-embed and
# serve using axum_embed.
rust_binary(
    name = "prod_all_real",
    srcs = ["src/main.prod.rs"],
    compile_data = ["//frontend:static_exports"],
    crate_features = ["real_cameras"],
    # At compile-time, this env var tells our source code exactly where
    # Bazel placed the frontend outputs, so rust-embed can embed it
    # into the binary directly.
    rustc_env = {
        "EMBEDDED_FRONTEND_DIR": "$(execpath //frontend:static_exports)",
    },
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Cpanic=abort",
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib_all_real",
        "@crates//:axum",
        "@crates//:axum-embed",
        "@crates//:rust-embed",
        "@crates//:tokio",
    ],
)

# Unit tests to test the backend library.
rust_test(
    name = "tests",
    crate = ":backend_lib_all_real",
    deps = [
        "@crates//:http-body-util",
        "@crates//:rand_distr",
        "@crates//:rstest",
        "@crates//:tower",
    ],
)

# -----------------------------------------------------------------------------
# AUXILIARY BINARIES
# -----------------------------------------------------------------------------

rust_binary(
    name = "discover",
    srcs = ["src/bin/discover_cameras.rs"],
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Cpanic=abort",
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib_real_cameras",
    ],
)

rust_binary(
    name = "record_from_one",
    srcs = ["src/bin/record_from_one_camera.rs"],
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib_real_cameras",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:ctrlc",
    ],
)

rust_binary(
    name = "record",
    srcs = ["src/bin/record_from_both_cameras.rs"],
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib_real_cameras",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:ctrlc",
    ],
)

rust_binary(
    name = "stream",
    srcs = ["src/bin/live_stream.rs"],
    rustc_flags = ["-Cstrip=symbols"] + select({
        "//:release": [
            "-Ccodegen-units=1",
            "-Copt-level=3",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":backend_lib_real_cameras",
        ":stream_lib",
        "@crates//:clap",
        "@crates//:crossbeam",
        "@crates//:ctrlc",
        "@crates//:eframe",
        "@crates//:egui",
    ],
)
