[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"]}

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
