"""
The deploy target assembles the statically exported frontend and the
backend's binary into one runnable target. It then calls a script
that launches the application.

Note that to build the optimized version, use the 'release' flag.
"""
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "mjolnir",
    srcs = ["deploy_mjolnir.sh"],
    data = [
        "//frontend:static_exports",
        "//backend:deploy",
    ],
    visibility = ["//visibility:public"],
)
